version-23.1/reference/rpk/rpk-redpanda/rpk-redpanda-mode.mdx
---
title: rpk redpanda mode
---

<head>
  <meta name="title" content="rpk redpanda mode | Redpanda Docs" />
  <meta name="description" content="rpk redpanda mode. Enables a default development or production configuration mode for Redpanda." />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-mode/" />
</head>

Enable a default configuration mode. This command changes the local `redpanda.yaml` and enable or disable the tuners based on each mode. For example `prod` enables multiple tuners whereas mode `dev` disable all tuners.

The available modes:
- [Development mode](#development-mode)
- [Production mode](#production-mode)
- [Usage](#usage)
- [Flags](#flags)

---

### Development mode

Development (dev) mode includes the following development-only settings:
- Sets `developer_mode` to `true`. This starts Redpanda with dev-mode only settings, including: 
  - No minimal memory limits are enforced.
  - No core assignment rules for Redpanda nodes are enforced.
  - Bypasses `fsync` (from [Seastar option `unsafe_bypass_fsync`](https://docs.seastar.io/master/structseastar_1_1reactor__options.html#ad66cb23f59ed5dfa8be8189313988692)), which results in unrealistically fast clusters and may result in data loss.

- Sets `overprovisioned` to `true`. Redpanda expects a dev system to be an overprovisioned environment. Based on a [Seastar option](https://docs.seastar.io/master/structseastar_1_1reactor__options.html#a0caf6c2ad579b8c22e1352d796ec3c1d), setting `overprovisioned` disables thread affinity, zeros idle polling time, and disables busy-poll for disk I/O. 

- Sets all autotuner [tuners](../rpk-redpanda-tune-list#tuners) to `false`. The tuners are intended to run only for production mode. 

<details>
  <summary>Enabled features in development mode</summary>

Enabling development (dev) mode sets the following features:

```
redpanda:
    ...
    developer_mode: true
rpk:
    tune_network: false
    tune_disk_scheduler: false
    tune_disk_nomerges: false
    tune_disk_write_cache: false
    tune_disk_irq: false
    tune_cpu: false
    tune_aio_events: false
    tune_clocksource: false
    tune_swappiness: false
    tune_ballast_file: false
    overprovisioned: true
    ...
```  
</details>

### Production mode

Production (prod) mode disables dev-mode settings:
- `developer_mode: false`
- `overprovisioned: false`

It also enables a set of tuners of the autotuner. For descriptions about the tuners, see [Tuners](../rpk-redpanda-tune-list#tuners) in the [rpk redpanda tune list](../rpk-redpanda-tune-list) command reference. 

<details>
  <summary>Enabled features in production mode</summary>

Enabling production (prod) mode sets the following features:

```yaml
redpanda:
  developer_mode: false
rpk:
  tune_network: true
  tune_disk_scheduler: true
  tune_disk_nomerges: true
  tune_disk_write_cache: true
  tune_disk_irq: true
  tune_cpu: true
  tune_aio_events: true
  tune_clocksource: true
  tune_swappiness: true
  tune_ballast_file: true
  overprovisioned: false
``` 
</details>

### Usage

```
rpk redpanda mode <mode> [flags]
```

### Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|--config |string |Redpanda config file, if not set the file will be
searched for in the default locations.

|-h, --help |- |Help for mode.

|-v, --verbose |- |Enable verbose logging (default `false`).
|===

-->
